[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/fantasy_map_editor/Editor.gd" type="Script" id=1]
[ext_resource path="res://addons/fantasy_map_editor/EditorMapContainer.gd" type="Script" id=2]
[ext_resource path="res://addons/fantasy_map_editor/EditorNode.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/fantasy_map_editor/EditorMap.gd" type="Script" id=5]
[ext_resource path="res://addons/fantasy_map_editor/EditorConnectionPreview.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.223529, 0.0745098, 0.0745098, 1 )

[node name="Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugPanel" type="PanelContainer" parent="Layout"]
visible = false
margin_right = 1024.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="Layout" type="HBoxContainer" parent="Layout/DebugPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NodeConatinerInfo" type="Label" parent="Layout/DebugPanel/Layout"]
margin_top = 6.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="HBoxContainer" parent="Layout"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingPanel" type="Panel" parent="Layout/Layout"]
margin_right = 400.0
margin_bottom = 600.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Layout/Layout/SettingPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="Layout/Layout/SettingPanel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="PanelContainer" parent="Layout/Layout/SettingPanel/MarginContainer/Layout"]
margin_right = 380.0
margin_bottom = 34.0

[node name="Layout" type="HBoxContainer" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/Menu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 373.0
margin_bottom = 27.0
alignment = 1

[node name="FileOpen" type="Button" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/Menu/Layout"]
margin_left = 137.0
margin_right = 184.0
margin_bottom = 20.0
text = "Oepn"

[node name="FileSave" type="Button" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/Menu/Layout"]
margin_left = 188.0
margin_right = 229.0
margin_bottom = 20.0
text = "Save"

[node name="NodeSetting" type="PanelContainer" parent="Layout/Layout/SettingPanel/MarginContainer/Layout"]
margin_top = 38.0
margin_right = 380.0
margin_bottom = 202.0

[node name="Layout" type="VBoxContainer" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting"]
margin_left = 7.0
margin_top = 7.0
margin_right = 373.0
margin_bottom = 157.0

[node name="Title" type="Label" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout"]
margin_right = 366.0
margin_bottom = 14.0
text = "Node Setting"
align = 1
valign = 1

[node name="Layout" type="GridContainer" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout"]
margin_top = 18.0
margin_right = 366.0
margin_bottom = 150.0
columns = 2

[node name="SizeLabel" type="Label" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout/Layout"]
margin_top = 5.0
margin_right = 181.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Size"
align = 1

[node name="SizeValue" type="SpinBox" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout/Layout"]
margin_left = 185.0
margin_right = 366.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 10.0
max_value = 200.0
value = 10.0
rounded = true
align = 1

[node name="PointsLabel" type="Label" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout/Layout"]
margin_top = 33.0
margin_right = 181.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Points"
align = 1

[node name="PointsValue" type="SpinBox" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout/Layout"]
margin_left = 185.0
margin_top = 28.0
margin_right = 366.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 5.0
value = 5.0
rounded = true
align = 1

[node name="RandomSizeLabel" type="Label" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout/Layout"]
margin_top = 61.0
margin_right = 181.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Random size"
align = 1

[node name="RandomSizeValue" type="SpinBox" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout/Layout"]
margin_left = 185.0
margin_top = 56.0
margin_right = 366.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 5.0
max_value = 50.0
value = 5.0
rounded = true
align = 1

[node name="SoildLabel" type="Label" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout/Layout"]
margin_top = 89.0
margin_right = 181.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Soild"
align = 1

[node name="SoildValue" type="CheckBox" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout/Layout"]
margin_left = 263.0
margin_top = 84.0
margin_right = 287.0
margin_bottom = 108.0
size_flags_horizontal = 4
size_flags_vertical = 0
align = 1

[node name="SoildColorLabel" type="Label" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout/Layout"]
margin_top = 115.0
margin_right = 181.0
margin_bottom = 129.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Soild color"
align = 1

[node name="SoildColorValue" type="ColorPickerButton" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout/Layout"]
margin_left = 185.0
margin_top = 112.0
margin_right = 366.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="GeneralSetting" type="PanelContainer" parent="Layout/Layout/SettingPanel/MarginContainer/Layout"]
margin_top = 206.0
margin_right = 380.0
margin_bottom = 366.0

[node name="Layout" type="VBoxContainer" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting"]
margin_left = 7.0
margin_top = 7.0
margin_right = 373.0
margin_bottom = 153.0

[node name="Title" type="Label" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout"]
margin_right = 366.0
margin_bottom = 14.0
text = "General Setting"
align = 1
valign = 1

[node name="Layout" type="GridContainer" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout"]
margin_top = 18.0
margin_right = 366.0
margin_bottom = 146.0
columns = 2

[node name="LineWidthLabel" type="Label" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout"]
margin_top = 5.0
margin_right = 181.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Line width"
align = 1

[node name="LineWidthValue" type="SpinBox" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout"]
margin_left = 185.0
margin_right = 366.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
max_value = 30.0
value = 2.0
rounded = true
align = 1

[node name="LineColorLabel" type="Label" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout"]
margin_top = 31.0
margin_right = 181.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Line color"
align = 1

[node name="LineColorValue" type="ColorPickerButton" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout"]
margin_left = 185.0
margin_top = 28.0
margin_right = 366.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MapBgLabel" type="Label" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout"]
margin_top = 55.0
margin_right = 181.0
margin_bottom = 69.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Map background color"
align = 1

[node name="MapBgValue" type="ColorPickerButton" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout"]
margin_left = 185.0
margin_top = 52.0
margin_right = 366.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="MapSizeLabel" type="Label" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout"]
margin_top = 81.0
margin_right = 181.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Map Size"
align = 1

[node name="MapSizeValue" type="HBoxContainer" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout"]
margin_left = 185.0
margin_top = 76.0
margin_right = 366.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Width" type="SpinBox" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout/MapSizeValue"]
margin_right = 82.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = 600.0
max_value = 2560.0
value = 600.0
rounded = true

[node name="Label" type="Label" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout/MapSizeValue"]
margin_left = 86.0
margin_top = 5.0
margin_right = 94.0
margin_bottom = 19.0
text = "X"

[node name="Height" type="SpinBox" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout/MapSizeValue"]
margin_left = 98.0
margin_right = 181.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = 600.0
max_value = 1920.0
value = 640.0
rounded = true

[node name="GridSnapLabel" type="Label" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout"]
margin_top = 109.0
margin_right = 181.0
margin_bottom = 123.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Grid snap"
align = 1

[node name="GridSnapValue" type="CheckBox" parent="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout"]
margin_left = 263.0
margin_top = 104.0
margin_right = 287.0
margin_bottom = 128.0
size_flags_horizontal = 4
size_flags_vertical = 0
align = 1

[node name="MapContainer" type="Control" parent="Layout/Layout"]
margin_left = 400.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="ViewportContainer" type="ViewportContainer" parent="Layout/Layout/MapContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Layout/Layout/MapContainer/ViewportContainer"]
size = Vector2( 624, 600 )
transparent_bg = true
handle_input_locally = false
usage = 1
render_target_update_mode = 3

[node name="Map" type="Control" parent="Layout/Layout/MapContainer/ViewportContainer/Viewport"]
margin_right = 624.0
margin_bottom = 604.0
rect_min_size = Vector2( 624, 604 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="Container" type="ScrollContainer" parent="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map"]
rect_min_size = Vector2( 624, 600 )
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NodeContainer" type="Control" parent="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map/Container"]
margin_right = 2048.0
margin_bottom = 1200.0
rect_min_size = Vector2( 2048, 1200 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="1" parent="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map/Container/NodeContainer" instance=ExtResource( 3 )]
margin_top = 24.0
margin_right = 924.0
margin_bottom = 124.0
mouse_filter = 1

[node name="2" parent="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map/Container/NodeContainer" instance=ExtResource( 3 )]
margin_top = 128.0
margin_right = 924.0
margin_bottom = 228.0
mouse_filter = 1
origin = Vector2( 400, 200 )

[node name="UI" type="CanvasLayer" parent="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map"]

[node name="ActionMenu" type="Popup" parent="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map/UI"]
margin_right = 100.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )

[node name="Layout" type="VBoxContainer" parent="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map/UI/ActionMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddButton" type="Button" parent="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map/UI/ActionMenu/Layout"]
margin_right = 100.0
margin_bottom = 20.0
text = "Add node"

[node name="DeleteButton" type="Button" parent="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map/UI/ActionMenu/Layout"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 40.0
text = "Delete node"

[node name="RegenerateButton" type="Button" parent="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map/UI/ActionMenu/Layout"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 60.0
text = "Regenerate"

[node name="ConnectButton" type="Button" parent="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map/UI/ActionMenu/Layout"]
margin_top = 60.0
margin_right = 100.0
margin_bottom = 80.0
text = "Connect node"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditorConnectionPreview" type="Control" parent="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map/UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="Preview" type="ViewportContainer" parent="Layout/Layout/MapContainer"]
visible = false
anchor_top = 0.95
anchor_bottom = 0.95
margin_top = -150.0
margin_right = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Layout/Layout/MapContainer/Preview"]
size = Vector2( 150, 150 )
handle_input_locally = false
render_target_update_mode = 0

[node name="Container" type="Panel" parent="Layout/Layout/MapContainer/Preview/Viewport"]
visible = false
margin_right = 10000.0
margin_bottom = 10000.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Layout/Layout/MapContainer/Preview/Viewport"]
visible = false
anchor_mode = 0
current = true
zoom = Vector2( 5, 5 )
[connection signal="value_changed" from="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout/Layout/SizeValue" to="." method="_on_SizeValue_value_changed"]
[connection signal="value_changed" from="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout/Layout/PointsValue" to="." method="_on_PointsValue_value_changed"]
[connection signal="value_changed" from="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout/Layout/RandomSizeValue" to="." method="_on_RandomSizeValue_value_changed"]
[connection signal="toggled" from="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout/Layout/SoildValue" to="." method="_on_SoildValue_toggled"]
[connection signal="color_changed" from="Layout/Layout/SettingPanel/MarginContainer/Layout/NodeSetting/Layout/Layout/SoildColorValue" to="." method="_on_SoildColorValue_color_changed"]
[connection signal="value_changed" from="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout/LineWidthValue" to="." method="_on_LineWidthValue_value_changed"]
[connection signal="color_changed" from="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout/LineColorValue" to="." method="_on_LineColorValue_color_changed"]
[connection signal="color_changed" from="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout/MapBgValue" to="." method="_on_MapBgValue_color_changed"]
[connection signal="value_changed" from="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout/MapSizeValue/Width" to="." method="_on_Width_value_changed"]
[connection signal="value_changed" from="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout/MapSizeValue/Height" to="." method="_on_Height_value_changed"]
[connection signal="toggled" from="Layout/Layout/SettingPanel/MarginContainer/Layout/GeneralSetting/Layout/Layout/GridSnapValue" to="." method="_on_GridSnapValue_toggled"]
[connection signal="gui_input" from="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map/Container/NodeContainer" to="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map" method="_on_NodeContainer_gui_input"]
[connection signal="pressed" from="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map/UI/ActionMenu/Layout/AddButton" to="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map" method="_on_AddButton_pressed"]
[connection signal="pressed" from="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map/UI/ActionMenu/Layout/DeleteButton" to="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map" method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map/UI/ActionMenu/Layout/RegenerateButton" to="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map" method="_on_RegenerateButton_pressed"]
[connection signal="pressed" from="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map/UI/ActionMenu/Layout/ConnectButton" to="Layout/Layout/MapContainer/ViewportContainer/Viewport/Map" method="_on_ConnectButton_pressed"]
